[package]
name = "staking"
version = "5.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { workspace = true }
psp22 = { path = "../psp22", default-features = false, features = ["ink-as-dependency"]}

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "psp22/std",
]
ink-as-dependency = []
e2e-tests = []
